fixed zoom on mobile

--- a/src/App.sass
+++ b/src/App.sass
@@ -6,7 +6,8 @@
         color: lightblue
 
 
-
+html
+    width: 100vw
 body
     
     display: grid
@@ -17,6 +18,7 @@ body
     overflow-x: hidden
     overflow-y: hidden
     margin: auto auto
+    width: 100%
     min-width: 768px
     max-width: 1366px
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
